--- a/style.css
+++ b/style.css
@@ -1,7 +1,76 @@
-/* body {
-  height: 100vh;
-  width: 100vw;
+body {
   display: flex;
   justify-content: center;
   align-items: center;
-} */
+  height: 4000px;
+  border: 1px solid black;
+}
+
+.container {
+  height: 50vh;
+  width: 50vw;
+  border: 1px solid red;
+  padding: 2rem;
+  perspective: 1000px;
+}
+
+.box1 {
+  width: 50px;
+  height: 50px;
+  transform-style: preserve-3d;
+  position: relative;
+  /* transform: rotateY(-15deg); */
+}
+
+.box1 div {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  opacity: 70%;
+}
+
+.front {
+  background-color: hsl(175deg, 100%, 70%);
+  transform: translateZ(25px);
+}
+
+.back {
+  background-color: hsl(120deg, 100%, 70%);
+  transform: translateZ(-25px);
+}
+.bottom {
+  background-color: hsl(259, 34%, 14%);
+  transform: translateY(25px) rotateX(-90deg);
+}
+.top {
+  background-color: hsl(60deg, 100%, 70%);
+  transform: translateY(-25px) rotateX(90deg);
+}
+.right {
+  background-color: hsl(290deg, 100%, 70%);
+  transform: translateX(25px) rotateY(90deg);
+}
+.left {
+  background-color: hsl(220deg, 100%, 70%);
+  transform: translateX(-25px) rotateY(-90deg);
+}
+
+@keyframes rotate-cube {
+  0% { transform: rotateX(0deg) rotateY(0deg);}
+  50% { transform: rotateX(180deg) rotateY(180deg);}
+  100% {transform: rotateX(360deg) rotateY(360deg);}
+}
+
+
+.box1 {
+  animation: rotate-cube 10s infinite linear;
+}
+
+.box1 div:hover {
+  width: 250px;
+  height: 250px;
+}
+
+.box1:hover {
+  animation-play-state: paused;
+}
